update ipynb to match new file's name

--- a/Gender-Classification.ipynb
+++ b/Gender-Classification.ipynb
@@ -44,7 +44,7 @@
    ],
    "source": [
     "!git clone https://github.com/Lamdtom/Gender-Classification\n",
-    "%cd GenderClassification"
+    "%cd Gender-Classification"
    ]
   },
   {
